--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     justify-content: space-between;
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    font-weight: bold;
     height: 100vh;
 }
 
@@ -12,7 +13,7 @@ body {
 }
 
 header {
-    height: 15%;
+    height: 12%;
     display: flex;
     background-color: #08AAE1;
 }
@@ -152,15 +153,13 @@ a:hover {
     color: #fff;
 }
 
-.card.twitter:hover {
+.card.java:hover {
     background-color: #1da1f2;
 }
 
-.card.instagram:hover {
-    background: radial-gradient(at 20% 128%,
-            #feda78 20%,
-            #e23467 60%,
-            #ac2bb3 90%);
+.card.sql:hover {
+    background: linear-gradient(to left, #D39D38, #4DA0B0);
+
 }
 
 .card.facebook:hover {
